# fernet_keyring_tempfile

./: .gitignore  licence  pyproject.toml  readme.md
.github/workflows/: publish_to_pypi.yml
src/fernet_keyring_tempfile/: __init__.py
tests/: test_fkt.py
