[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fernet_keyring_tempfile"
version = "0.1.0"
authors = [
  { name="thehappycheese", email="2748120+thehappycheese@users.noreply.github.com" },
]
description = "Use cryptography.Fernet to encrypt and store a tempfile, automatically store the key in keyring. Indended to thrawrt only the most basic filesystem scans for plaintext tokens."
readme = "readme.md"
requires-python = ">=3.8"
dependencies = [
    "cryptography",
    "keyring"
]
license = {file = "licence"}

[project.urls]
Homepage = "https://github.com/thehappycheese/fernet_keyring_tempfile"
